# simple_shell

./: .gitignore  CMakeLists.txt  README.md  built_in.c  built_in.h  lexer.cpp  lexer.hpp  low_level.c  low_level.h  main.cpp  parser.cpp  parser.hpp  program.hpp  simple_structs.h
include/: built_in.h  low_level.h  program.hpp
src/: built_in.c  lexer.cpp  low_level.c  parser.cpp
